27 Jun 2002 Fix keyaccess on PGOUT - Jan Jaeger
23 Jun 2002 Fix for `no shadow file name' messages - Greg Smith
23 Jun 2002 Gabor Hoffer's performance patch: parts 1 & 2 -- Fish
23 Jun 2002 Fixes/enhancements for cckd chkdsk - Greg Smith
20 Jun 2002 Fix arch mode id in store status function - Jan Jaeger
19 Jun 2002 Set manufacterer to HRC for STSI - Jan Jaeger
18 Jun 2002 FBA dasdtab updates - Tomas Masek by Greg Smith
18 Jun 2002 Fix NRF condition for CKD dasd - Greg Smith
17 Jun 2002 Fix segmentation fault during cckd compress - Greg Smith
15 Jun 2002 configure.ac: Cygwin stack bug workaround - Matt and Fish
15 Jun 2002 cfba chkdsk fix - Greg Smith
15 Jun 2002 ckd internal trace support - Greg Smith
14 Jun 2002 Remove cfba debugs - Greg Smith
14 Jun 2002 Set `more' if residual data after fba write - Tomas Masek by Greg Smith
13 Jun 2002 Another cfba fix (segmentation fault after detach while trace active) - Greg Smith
13 Jun 2002 READ BACKWARD support for tapes added - Volker Bandke (Original patch: Hax 28 by Hackules)
12 Jun 2002 cfba/cckd/ckd fixes - Greg Smith
05 Jun 2002 Increase 3270 buffer to 64K as adding IAC bytes may cause overflow - Jan Jaeger
02 Jun 2002 Created "hercnls.h" module and fixed some typos/warnings - Fish
30 May 2002 Preliminary cfba (compressed fba) support - Greg Smith
30 May 2002 Various dasd fixes - Greg Smith
24 May 2002 Fixes for the cckd updates - Greg Smith
18 May 2002 More updates for cckd - Greg Smith
15 May 2002 Fix for MVPG problem as reported by Guy Przytula - Jan Jaeger
14 May 2002 Updates for cckd - Greg Smith
14 May 2002 Fix S/370 timer problem - Valery Pogonchenko
13 May 2002 NLS support for cckd utilities - Jan Jaeger
11 May 2002 NLS support - Jan Jaeger
08 May 2002 Fixes for 3350 dasdload - Greg Smith
08 May 2002 CodePage converion table 850/273 - Gerd Petermann
05 May 2002 Add some NLS definitions - Jan Jaeger
05 May 2002 Merge Debian patch to ckd2cckd.c to permit compilation with