@@ -3261,8 +3261,10 @@ GREG    len3;
             GR_A(r1, regs) = addr1;
             GR_A(r2, regs) = addr2;
             regs->psw.cc =  3;
+#if 0
             logmsg (_("MVCL destructive overlap: "));
             ARCH_DEP(display_inst) (regs, inst);
+#endif
             return;
         }
     }
